--- a/css/application.css
+++ b/css/application.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    font: normal 18px/1.6 'lato', sans-serif;
+    font: normal 18px/1.6 lato,sans-serif;
     color: #d7e3ec;
     background-color: #424242;
     margin: 0;
