--- a/css/application.css
+++ b/css/application.css
@@ -266,9 +266,9 @@ section.section a:visited {
 }
 
 #intro {
-    background: #f5f5f5;
-    color: #525252;
-    box-shadow: 1000px 0 0 0 #f5f5f5, -1000px 0 0 0 #f5f5f5;
+    background: #eaeaea;
+    color: #454545;
+    box-shadow: 1000px 0 0 0 #eaeaea, -1000px 0 0 0 #eaeaea;
 }
 
 .work-list {
