--- a/css/application.css
+++ b/css/application.css
@@ -265,7 +265,7 @@ section.section a:visited {
     }
 }
 
-#intro {
+#work {
     background: #eaeaea;
     color: #454545;
     box-shadow: 1000px 0 0 0 #eaeaea, -1000px 0 0 0 #eaeaea;
