--- a/css/application.css
+++ b/css/application.css
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    font: normal 18px/1.6 'Nunito',serif;
+    font: normal 18px/1.6 'Merriweather',serif;
     color: #d7e3ec;
     background-color: #424242;
     margin: 0;
@@ -27,7 +27,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Nunito Sans',sans-serif;
+    font-family: 'Merriweather Sans',sans-serif;
     font-weight: 700;
 }
 
@@ -120,14 +120,16 @@ section.section a:visited {
 }
 
 .title {
-    font-size: 3.125em
+    font-size: 3.5em;
+    font-family: 'Merriweather';
 }
 
 .subtitle {
     margin-top: 1em;
-    font-size: 0.78em;
+    font-size: 0.925em;
     opacity: .925;
-    text-transform: uppercase
+    text-transform: uppercase;
+    font-family: 'Merriweather Sans';
 }
 
 .title a {
@@ -366,8 +368,7 @@ section.section a:visited {
 
 .work-project-title {
     line-height: 1.2;
-    font-size: 1.5em;
-    font-weight: normal
+    font-size: 1.6em;
 }
 
 .work-desc,
@@ -421,8 +422,7 @@ section.section a:visited {
 }
 
 .from {
-    font-size: 1.1em;
-    font-style: italic;
+    font-size: 1.15em;
     text-align: right;
     margin-top: 15px
 }
@@ -445,7 +445,8 @@ section.section a:visited {
     text-shadow: 0 1px rgba(0, 0, 0, 0.2);
     margin: 0 auto;
     -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.4)
+    box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.4);
+    font-family: 'Merriweather Sans';
 }
 
 .email-container .email:hover {
