--- a/css/application.css
+++ b/css/application.css
@@ -566,22 +566,57 @@ p:last-child {
     fill: #fff
 }
 
+#history {
+    background: #f5f5f5;
+    color: #434343;
+    box-shadow: 1000px 0 0 0 #f5f5f5, -1000px 0 0 0 #f5f5f5;
+}
+
 .history {
   list-style: none;
-  margin: 0;
+  margin: 0 -20px;
   padding: 0;
-  display: flex;
-  flex-wrap: wrap;
+}
+
+@media (max-width: 601px) {
+    .history {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
+.history-item:nth-child(-n+3) {
+    margin-top: 0;
 }
 
 @media (min-width: 769px) {
     .history-item {
-      width: 33.333%;
+        width: 33.333%;
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 768px) and (min-width: 601px) {
+    .history-item {
+        width: 50%;
+        margin-top: 40px;
+    }
+}
+
+@media (max-width: 600px) {
+    .history-item {
+        width: 100%;
+        margin-top: 0;
+        margin-bottom: 40px;
+    }
+    
+    .history-item:last-child {
+        margin-bottom: 0;
     }
 }
 
 .history-inner {
-    padding: 11px 15px;
+    padding: 0 20px;
 }
 
 .history-item-title {
