--- a/css/application.css
+++ b/css/application.css
@@ -578,7 +578,7 @@ p:last-child {
   padding: 0;
 }
 
-@media (max-width: 601px) {
+@media (min-width: 601px) {
     .history {
         display: flex;
         flex-wrap: wrap;
@@ -620,7 +620,7 @@ p:last-child {
 }
 
 .history-item-title {
-  font-size: 1.6em;
+  font-size: 1.5em;
   line-height: 1.2;
   font-family: 'Merriweather Sans';
 }
