--- a/css/application.css
+++ b/css/application.css
@@ -61,8 +61,12 @@ p:last-child {
 }
 
 #about {
-    padding-top: 0;
+    border-top: 1px solid #fff; 
     padding-bottom: 0;
+}
+
+.prices-larger {
+    font-size: 1.2em;
 }
 
 @media (max-width: 768px) {
