--- a/css/application.css
+++ b/css/application.css
@@ -710,8 +710,8 @@ p:last-child {
   margin: 0;
   font-size: 0.9em;
   padding: 14px 20px;
-  border: 1px solid;
-  opacity: 0.625;
+  border: 1px solid #61696f;
+  color: #959da2;
   text-shadow: 0 1px 1px rgba(0,0,0,0.75);
 }
 
