--- a/css/application.css
+++ b/css/application.css
@@ -654,18 +654,22 @@ p:last-child {
 .form-input {
   font: inherit;
   margin: 0;
-  padding: 10px;
   color: inherit;
   width: 100%;
-  padding: 10px;
+  padding: 10px 14px;
   border-radius: 4px;
-  border: 1px solid #d7e3ec;
+  border: 1px solid #a7b0b7;
   background: transparent;
+}
+
+.form-textarea {
+  line-height: 1.45;
+  min-height: 160px;
 }
 
 .form-input:focus {
   outline: none;
-  background: rgba(255,255,255,0.125);
+  background: rgba(255,255,255,0.1);
 }
 
 .form-info-help {
@@ -674,13 +678,6 @@ p:last-child {
   text-align: right;
   font-size: 0.8em;
   opacity: 0.8;
-}
-
-.form-textarea {
-  padding-top: 5px;
-  padding-bottom: 5px;
-  line-height: 1.45;
-  min-height: 160px;
 }
 
 .form-section {
