--- a/css/application.css
+++ b/css/application.css
@@ -690,17 +690,21 @@ p:last-child {
     margin-bottom: 60px;
 }
 
-.form-submit {
-    font: inherit;
-    font-family: 'Merriweather Sans',sans-serif;
-    font-weight: 700;
-    background: linear-gradient(-10deg, #0e89eb 33%, #41a8f9 100%);
-    color: #fff;
-    border: none;
-    padding: 25px 29px;
-    border-radius: 4px;
-    line-height: 1;
-    text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.033), -1px 0 1px rgba(0, 0, 0, 0.033), -1px 1px 1px rgba(0, 0, 0, 0.033), 0 -1px 1px rgba(0, 0, 0, 0.033), 0 0 1px rgba(0, 0, 0, 0.033), 0 1px 1px rgba(0, 0, 0, 0.033), 1px -1px 1px rgba(0, 0, 0, 0.033), 1px 0 1px rgba(0, 0, 0, 0.033), 1px 1px 1px rgba(0, 0, 0, 0.033);
+.contact-button-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.form-submit,
+.contact-button-start {
+  font-family: 'Merriweather Sans',sans-serif;
+  font-weight: 700;
+  padding: 20px 30px;
+  color: #fff;
+  border-radius: 4px;
+  background-image: linear-gradient(to bottom, #0096ff, #005a99);
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.033), -1px 0 1px rgba(0, 0, 0, 0.033), -1px 1px 1px rgba(0, 0, 0, 0.033), 0 -1px 1px rgba(0, 0, 0, 0.033), 0 0 1px rgba(0, 0, 0, 0.033), 0 1px 1px rgba(0, 0, 0, 0.033), 1px -1px 1px rgba(0, 0, 0, 0.033), 1px 0 1px rgba(0, 0, 0, 0.033), 1px 1px 1px rgba(0, 0, 0, 0.033);
+  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.4);
 }
 
 .form-disclaimer {
