--- a/css/application.css
+++ b/css/application.css
@@ -691,11 +691,11 @@ p:last-child {
   cursor: pointer;
 }
 
-.form-section-messages p {
+.form-section-messages > div {
     display: none;
 }
 
-.form-section-messages .is-visible p {
+.form-section-messages .is-visible {
     display: block;
 }
 
@@ -710,10 +710,6 @@ p:last-child {
   border: 1px solid #61696f;
   color: #959da2;
   text-shadow: 0 1px 1px rgba(0,0,0,0.75);
-}
-
-.is-visible p {
-    display: block;
 }
 
 .form-success,
