--- a/css/application.css
+++ b/css/application.css
@@ -28,6 +28,9 @@ body {
     background-color: #434343;
     margin: 0;
     overflow-x: hidden;
+    font-optical-sizing: auto;
+    font-variation-settings:
+      "wdth" 100;
 }
 
 h1, h2, h3, h4, h5, h6 {
