--- a/css/application.css
+++ b/css/application.css
@@ -376,6 +376,7 @@ p:last-child {
 .work-screenshot-img {
     border-radius: 0 0 3px 3px;
     border-top: 0;
+    width: 100%;
     max-width: 500px;
     display: block;
 }
@@ -404,6 +405,15 @@ p:last-child {
     position: relative;
     top: -2px;
     margin-left: 8px
+}
+
+@media (max-width: 1150px) {
+    .work-view-btn {
+        display: block;
+        max-width: 61px;
+        margin-left: 0;
+        margin-top: 15px;
+    }
 }
 
 .work-view-btn:hover {
